# zed

./: Cargo.toml
.github/workflows/: release.yml
crates/agent_ui/src/: agent_diff.rs  agent_panel.rs  buffer_codegen.rs  conversation_view.rs  inline_assistant.rs
crates/collab/src/: rpc.rs
crates/dev_container/src/: devcontainer_manifest.rs  docker.rs
crates/editor/src/: editor.rs  editor_tests.rs  element.rs  git.rs
crates/extension/src/: types.rs
crates/extension_api/src/: process.rs
crates/git_graph/src/: git_graph.rs
crates/gpui/src/: app.rs  platform.rs  window.rs
crates/gpui_macos/src/: platform.rs  window.rs
crates/language/src/: buffer_tests.rs  language.rs
crates/lsp/src/: lsp.rs
crates/markdown_preview/src/: markdown_preview_view.rs
crates/node_runtime/src/: node_runtime.rs
crates/platform_title_bar/: Cargo.toml
crates/platform_title_bar/src/: platform_title_bar.rs  system_window_tabs.rs
crates/project/src/: lsp_command.rs  lsp_store.rs  project.rs
crates/proto/proto/: lsp.proto  zed.proto
crates/proto/src/: proto.rs
crates/recent_projects/src/: recent_projects.rs
crates/session/src/: session.rs
crates/settings_content/src/: theme.rs
crates/sidebar/src/: sidebar.rs  sidebar_tests.rs
crates/theme/src/: default_colors.rs  fallback_themes.rs
crates/theme_checker/: Cargo.toml
crates/theme_checker/src/: main.rs
crates/theme_settings/src/: schema.rs  settings.rs  theme_settings.rs
crates/title_bar/src/: title_bar.rs
crates/workspace/src/: multi_workspace.rs  workspace.rs
script/: check-theme-keys
(+23 files in other folders)
